Fix spacing for nav bar

--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,28 @@ body > div {
     grid-row: 1/3;
     background-color: #0ea5e9;
     color: white;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+}
+
+.side-bar .nav-links {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    padding-left: 3rem;
 }
 
 .nav-row {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-}
-
-.nav-row h3 {
-    align-items: center;
+    /* justify-content: center; */
+    gap: 3rem;
 }
 
 .nav-row > svg {
-    height: 3rem;
+    height: 2rem;
+    fill: white;
+}
+
+.nav-bottom {
 }
